# hellforge

./: .gitignore  LICENSE  README.md  affiliations.csv  deploy.md  env.yml  manage.py  pyproject.toml  tests.md
hellforge/: asgi.py  settings.py  wsgi.py
main/: admin.py  ajax.py  forms.py  models.py  queries.py  signals.py  tests.md  urls.py  urls_ajax.py  views.py
main/migrations/: 0001_initial.py  0002_alter_location_geo.py  0003_reference_tags.py  0004_reference_author.py  0005_remove_reference_author_remove_reference_link_and_more.py  0006_remove_profile_ref_remove_layer_profile_and_more.py  0007_alter_layer_options_alter_profile_site.py  0008_checkpoint_description_culture_description_and_more.py  0009_layer_site_use_alter_culture_date_alter_epoch_date.py  0010_layer_characteristics_mammalianassemblage.py  0011_reference_tags.py  0012_culture_hominin_group.py  0013_alter_culture_options_alter_epoch_options_and_more.py  0014_layer_mean_lower_layer_mean_upper.py  0015_site_country.py  0016_alter_site_options_checkpoint_mean_lower_and_more.py  0017_culture_parent_epoch_parent.py  0018_layer_site.py  0019_remove_reference_pdf.py  0020_alter_layer_checkpoint.py  0021_contactperson_site_contact.py  0022_contactperson_tags.py  0023_remove_culture_loc.py  0024_remove_culture_date.py  0025_alter_culture_options_and_more.py  0026_alter_epoch_options_remove_checkpoint_mean_lower_and_more.py  0027_alter_reference_doi.py  0028_alter_reference_title.py  0029_alter_culture_options_alter_culture_lower_and_more.py  (+162 more)
site_aligner/: asgi.py  settings.py  urls.py  wsgi.py
(+211 files in other folders)
