[project]
name = "hellforge"
version = "0.2.0"
description = "A webapp to display archaeological information, to contextualize sedaDNA samples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "citeproc-py>=0.6.0",
    "citeproc-py-styles>=0.1.3",
    "django>=5.1.3",
    "iosacal>=0.6.0",
    "pandas>=2.2.3",
    "pyeditorjs>=1.0.0b0",
    "python-decouple>=3.8",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "setuptools>=75.6.0",
    "titlecase>=2.4.1",
    "weasyprint>=63.1",
]
